# serializer version: 1
# name: test_agents_delete
  list([
    tuple(
      'uplink',
      'rm',
      'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    ),
  ])
# ---
# name: test_agents_delete_fail
  list([
    tuple(
      'uplink',
      'rm',
      'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    ),
  ])
# ---
# name: test_agents_delete_not_found
  list([
  ])
# ---
# name: test_agents_download
  tuple(
    'uplink',
    'cp',
    'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    'temp/Test_2025-01-01_01.23_45678000.tar',
  )
# ---
# name: test_agents_download_file_not_found
  list([
  ])
# ---
# name: test_agents_download_temp_fail
  tuple(
    'uplink',
    'cp',
    'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    'temp/Test_2025-01-01_01.23_45678000.tar',
  )
# ---
# name: test_agents_upload
  tuple(
    'uplink',
    'cp',
    'tmp.tar',
    'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    '--metadata',
    '{"addons.[0].name": "Test", "addons.[0].slug": "test", "addons.[0].version": "1.0.0", "backup_id": "test-backup", "date": "2025-01-01T01:23:45.678Z", "database_included$bool": "True", "extra_metadata.with_automatic_settings$bool": "False", "folders$emptylist": "[]", "homeassistant_included$bool": "True", "homeassistant_version": "2024.12.0", "name": "Test", "protected$bool": "False", "size$int": "987"}',
  )
# ---
# name: test_agents_upload_in_hassio
  tuple(
    'uplink',
    'cp',
    'tmp.tar',
    'sj://ha-backups/backups/Test_2025-01-01_01.23_45678000.tar',
    '--metadata',
    '{"addons.[0].name": "Test", "addons.[0].slug": "test", "addons.[0].version": "1.0.0", "backup_id": "test-backup", "date": "2025-01-01T01:23:45.678Z", "database_included$bool": "True", "extra_metadata.with_automatic_settings$bool": "False", "folders$emptylist": "[]", "homeassistant_included$bool": "True", "homeassistant_version": "2024.12.0", "name": "Test", "protected$bool": "False", "size$int": "987"}',
  )
# ---
